# Bomberman

./: .editorconfig  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assets  bomberman.sln  bomberman.vcxproj  bomberman.vcxproj.filters  shell.nix
Debug/: bote
Debug/assets/: load.xcf
Debug/assets/settings/: plus.xcf
assets/Bomb/: exportbomb.mtl  normalbomba2.tga  shaded.tga
assets/PlayerA/: script.sh
assets/PlayerB/: script.sh
assets/settings/: minus.xcf  player_bombs.xcf
cmake/: FindIrrlicht.cmake  FindSFML.cmake
cmake/include/: crossPlatform.hpp
include/: crossPlatform.hpp
src/: Board.hpp  Game.cpp  Game.hpp  GraphicalBoard.hpp  Indie.cpp  Indie.hpp  Menu.cpp  Menu.hpp  PlayersSettings.cpp  PlayersSettings.hpp  PlayersSettingsSave.cpp  PlayersSettingsSave.hpp  Position.cpp  Position.hpp  Size.hpp  main.cpp
src/Animations/: AnimatedMesh.cpp  AnimatedMesh.hpp  Animator.cpp  Animator.hpp
src/Behaviour/: AIBehaviour.cpp  AIBehaviour.hpp  AIUtils.cpp  AIUtils.hpp  BoardBehaviour.cpp  BoardBehaviour.hpp  BombBehaviour.cpp  BombBehaviour.hpp  IBehaviour.hpp  PlayerBehaviour.cpp  PlayerBehaviour.hpp  PowerUpBehaviour.cpp  PowerUpBehaviour.hpp  TimeoutObjectBehaviour.cpp  TimeoutObjectBehaviour.hpp
src/BoardObject/: BlockBreakable.cpp  BlockBreakable.hpp  BoardObject.cpp  BoardObject.hpp  BoardObjectFactory.cpp  BoardObjectFactory.hpp  Bomb.cpp  Bomb.hpp  BombUp.cpp  BombUp.hpp  Explosion.cpp  Explosion.hpp  FireUp.cpp  FireUp.hpp  Ground.cpp  Ground.hpp  PowerUp.cpp  PowerUp.hpp  SpeedUp.cpp  SpeedUp.hpp  TimeoutObject.cpp  TimeoutObject.hpp  Wall.cpp  Wall.hpp  WallPass.cpp  WallPass.hpp
src/Entities/: AbstractEntity.cpp  AbstractEntity.hpp  BlockBreakable.cpp  BlockBreakable.hpp  Bomb.cpp  Bomb.hpp  Ground.cpp  Ground.hpp  IEntity.hpp  Orientation.cpp  Orientation.hpp  Player.cpp  Player.hpp  PlayerFactory.cpp  PlayerFactory.hpp
src/Map/: Board.cpp  Board.hpp  ExplosionManager.cpp  ExplosionManager.hpp  Map.cpp  Map.hpp  Tile.hpp  Tiles.hpp  TimeoutObjectManager.hpp
src/Scenes/: AScene.cpp  AScene.hpp  ButtonPosition.cpp  ButtonPosition.hpp  DeadScene.cpp  DeadScene.hpp  GameScene.cpp  GameScene.hpp  LoadingScene.cpp  LoadingScene.hpp  MainMenu.cpp  MainMenu.hpp  OptionsScene.cpp  OptionsScene.hpp  PauseScene.cpp  PauseScene.hpp  SceneManager.cpp  SceneManager.hpp
src/Services/: DeviceService.cpp  DeviceService.hpp  FileSystemService.cpp  FileSystemService.hpp  KeyService.cpp  KeyService.hpp  LoadingService.cpp  LoadingService.hpp  PathfindingService.cpp  PathfindingService.hpp  Singleton.hpp
src/Utilities/: DirectionMap.cpp  DirectionMap.hpp  FullPath.cpp  FullPath.hpp  Keys.cpp  Keys.hpp  Path.cpp  Path.hpp  PlaceRectangle.cpp  PlaceRectangle.hpp  to2d.cpp  to2d.hpp
tests/: gtestTest.cpp
(+41 files in other folders)
